header framed out with comments added

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,3 +2,16 @@ body {
   font-family: Helvetica;
   text-align: center;
 }
+
+#hero-title {
+    font-size: 70px;
+    font-weight: bold;
+    color: white
+}
+
+a {
+  color: white;
+}
+.hero-image {
+  background-image: url("../images/the-flatiron-building.png");
+}
